--- a/commons/hadoop-commons-5.0/pom.xml
+++ b/commons/hadoop-commons-5.0/pom.xml
@@ -19,6 +19,7 @@
         <jets3t.version>0.9.0</jets3t.version>
         <log4j.version>1.2.15</log4j.version>
         <vdp.version>5.0.0_2</vdp.version>
+        <parquet.version>1.9.0</parquet.version>
     </properties>
 
     <!-- *************************** -->
@@ -123,7 +124,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.parquet</groupId>
+            <artifactId>parquet-hadoop</artifactId>
+            <version>${parquet.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.avro</groupId>
             <artifactId>avro-mapred</artifactId>
