--- a/commons/hadoop-commons-6.0/pom.xml
+++ b/commons/hadoop-commons-6.0/pom.xml
@@ -19,6 +19,7 @@
         <jets3t.version>0.9.0</jets3t.version>
         <log4j.version>1.2.15</log4j.version>
         <vdp.version>6.0.0</vdp.version>
+        <parquet.version>1.7.0</parquet.version>
     </properties>
 
     <!-- *************************** -->
@@ -125,7 +126,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
+        
+        <dependency>
+            <groupId>org.apache.parquet</groupId>
+            <artifactId>parquet-hadoop</artifactId>
+            <version>${parquet.version}</version>
+        </dependency>
+        
         <dependency>
             <groupId>org.apache.avro</groupId>
             <artifactId>avro-mapred</artifactId>
